// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicKeyFormDialogAdd Button create publicKey has authorization - owner Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary" data-test="createKey-btn">Add Public Key</button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`PublicKeyFormDialogAdd Button create publicKey has no authorization - operator Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default" data-test="createKey-btn">Add Public Key</button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`PublicKeyFormDialogAdd Dialog create publicKey has authorization - owner Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary" data-test="createKey-btn">Add Public Key</button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;
